# tdlua

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  LuaTDVoip.cpp  LuaTDVoip.h  README.md  compile.sh  dist.cmake  dist.info  login.lua  luaIF.cpp  luaIF.h  luajson.cpp  luajson.h  tdlua.cpp  tdlua.h
.github/: FUNDING.yml
.github/workflows/: build.yml
examples/: botid.lua  call.lua  example.lua  login.lua  tdbot.lua  uploadtravis.lua
