project (tdlua)
cmake_minimum_required (VERSION 3.1)
find_package(Td REQUIRED)
if(NOT LUA_INCLUDE_DIR)
  find_package(Lua REQUIRED)
endif()
include_directories(${LUA_INCLUDE_DIR})
add_library (tdlua SHARED tdlua.cpp luajson.cpp tdlua.h)
set_target_properties(tdlua PROPERTIES PREFIX "")
if(TDLUA_TD_STATIC)
  target_link_libraries (tdlua PRIVATE Td::TdJsonStatic)
else()
  target_link_libraries (tdlua PRIVATE Td::TdJson)
endif()
set_property (TARGET tdlua PROPERTY CXX_STANDARD 11)
